--- a/QuitSoonApp/static/QuitSoonApp/scss/layouts/_header.scss
+++ b/QuitSoonApp/static/QuitSoonApp/scss/layouts/_header.scss
@@ -214,7 +214,7 @@ header {
     }
   }
   &#username-nav {
-    margin-left: 0.25em;
+    // margin-left: 0.25em;
     // display: inline-block;
   }
 }
